# geoapps-starter-2425-geoapps-starter-2425-geoapps-python-course

./: 404.html  Dockerfile  README.md  index.html  main.py  main_zajecia03.py  mat2.py  matematyka.py  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: publish-docs-pipeline.yaml  release.yml
Zadania/z1/: z1.py  z3.py  zadania_sprawdzajace_1.py
Zadania/z2/: funkcje_anonimowe_lambda.py  generatory.py  przypisania.py  wstep_funkcje.py  wstep_funkcje_2.py  wstep_petle.py
Zadania/z4/: dekoratory.py  prowadzenie_dokumentacji.py
Zadania/z7/: main_zajecia07.py
Zajęcia1/Instrukcje warunkowe i pętle/: petle.py
Zajęcia1/Moduły i przestrzenie nazw/: czas.py  skrypt1.py
Zajęcia1/Podstawowe typy wbudowane/: przyklad.py  skrypt2.py
Zajęcia1/Ćwiczenia sprawdzające/: cw1.py  nowyTekst.json
docs/: index.md
docs/zaj0/: srod-lok.md
docs/zaj01/: cwl01_1_moduly  cwl01_sprawdzające.py  czas.py  git.md  instrukcje_petle.md  moduly_przestrzenie.md  niespodziewane.md  praca_z_plikami.md  skrypt1.py  skrypt2.py  teksty.json  typy_wbudowane.md  warunkowe.py  zadania_sprawdzajace.md
docs/zaj02/: funkcje.md  generatory.md  iteratory.md  lambda.md  listy_skladane.md  petle.md  przypisania.md
docs/zaj03/: abstrakcyjne.md  dziedziczenie.md  introspekcja.md  klasy.md  metody.md  obiektowe_poco.md  przeciazanie.md  przyklad.md  pseudoprywatne.md  sloty.md  wbudowane.md  zadania.md
docs/zaj04/: dokumentacja.md  nazewnictwo.md  pakiety.md  zasiegi.md
geoapps/zajecia03/: __init__.py
search/: search_index.json
zaj0/srod-lok/: index.html
(+49 files in other folders)
